# ThyraXCDSS

./: .dockerignore  .env.example  .gitattributes  .gitignore  ACCELERATION_PLAN.md  API_DOCUMENTATION.md  Dockerfile  README.md  README_ThyraX.md  alembic.ini  clear_cache.py  create_tables.py  docker-compose.yml  gunicorn.conf.py  main.py  migrate_db.py  pyproject.toml  start.sh  test_e2e.py
alembic/: env.py
alembic/versions/: 56445eae8f8e_initial_migration.py
app/agent/: agent.py  research_agent.py  tools.py
app/agent/mcp_servers/: __init__.py  mcp_client.py  rag_server.py  web_server.py
app/core/: async_database.py  audit.py  cache.py  celery_app.py  circuit_breaker.py  config.py  database.py  db_models.py  http_client.py  inference.py  llm_client.py  model_loader.py  models.py  responses.py  security.py  storage.py
app/routers/: ai_chat.py  chat.py  clinical.py  document.py  fnac.py  image.py  synthesis.py
app/schemas/: ai_nodes.py  chat.py  clinical.py  fnac.py  image.py  memory_models.py
app/segmentation/: model.py
app/services/: clinical_service.py  document_service.py  image_service.py  inference.py  internal_synthesis.py  memory_manager.py  patient_state.py  semantic_cache.py  synthesis_llm.py  vision_explanation.py
app/utils/: image_compositor.py
app/worker/: tasks.py
data/: chroma.sqlite3
data/audit/: audit_log.jsonl
data/data/: chroma.sqlite3
data/data/14859157-ac67-4226-b5b6-e36e1557de3e/: index_metadata.pickle
data/data/audit/: audit_log.jsonl
models/compressed/: classification_b4.onnx  disease_compressed.joblib  efficientnet_b4_medical_final.onnx  fnac_gatekeeper.onnx  gatekeeper.onnx  gatekeeper.onnx.data  segmentation.onnx
