[project]
name = "thyroid-cancer"
version = "2.0.0"
description = "ThyraX CDSS - Clinical Decision Support System for Thyroid Cancer"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # ── Existing ──
    "fastapi>=0.115.0",
    "joblib>=1.4.0",
    "numpy>=1.26.0",
    "onnxruntime>=1.17.0",
    "opencv-python-headless>=4.9.0",
    "pandas>=2.2.0",
    "python-multipart>=0.0.9",
    "scikit-learn>=1.4.0",
    "uvicorn>=0.27.0",
    "xgboost>=2.0.0",
    # ── NEW: LangChain Agent ──
    "langchain>=0.3.0",
    "langchain-groq>=0.2.0",
    "langchain-community>=0.3.0",
    # ── NEW: RAG & Embeddings ──
    "chromadb>=0.5.0",
    "sentence-transformers>=3.0.0",
    # ── NEW: Database ──
    # ── NEW: Settings ──
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    # ── Frontend ──
    # ── NEW: Vision OCR & Validation ──
    "anthropic>=0.25.0",
    "langchain-google-genai>=4.2.1",
    "google-generativeai>=0.8.6",
    "httpx>=0.28.1",
    "pytest>=9.0.3",
    # ── NEW: In-Memory TTL Cache ──
    "cachetools>=5.3.0",
    "pillow>=12.2.0",
    "pytesseract>=0.3.13",
    "ddgs>=9.14.1",
]
