[project]
name = "thyroid-cancer"
version = "2.0.0"
description = "ThyraX CDSS - Clinical Decision Support System for Thyroid Cancer"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # ── Existing ──
    "fastapi>=0.115.0",
    "joblib>=1.4.0",
    "numpy>=1.26.0",
    "onnxruntime>=1.17.0",
    "opencv-python-headless>=4.9.0",
    "pandas>=2.2.0",
    "python-multipart>=0.0.9",
    "scikit-learn>=1.4.0",
    "uvicorn>=0.27.0",
    "xgboost>=2.0.0",
    # ── NEW: LangChain Agent ──
    "langchain>=0.3.0",
    "langchain-groq>=0.2.0",
    "langchain-community>=0.3.0",
    # ── NEW: RAG & Embeddings ──
    "chromadb>=0.5.0",
    "sentence-transformers>=3.0.0",
    # ── NEW: Database ──
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.0",
    "asyncpg>=0.30.0",
    "alembic>=1.15.0",
    # ── NEW: Settings ──
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    # ── Frontend ──
    # ── NEW: In-Memory TTL Cache ──
    "cachetools>=5.3.0",
    "pillow>=12.2.0",
    "ddgs>=9.14.1",
    "mcp>=1.0.0",
    "langchain-mcp-adapters>=0.1.0",
    "asyncpg>=0.31.0",
    "alembic>=1.18.4",
    # ── NEW: Background Tasks (Celery & Brokers) ──
    "celery>=5.3.0",
    "redis>=5.0.0",
    "pika>=1.3.0",
    "httpx>=0.28.1",
    # ── NEW: Production WSGI Process Manager ──
    "gunicorn>=22.0.0",
]
